# PaperTerrace

./: .agent  .agents  .biomeignore  .dockerignore  .env.example  .env.homeserver.example  .env.staging  .gcloudignore  .gitignore  .gitmodules  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  LOADING_PERFORMANCE_FIX.md  PP_DOCLAYOUT_MIGRATION_STATUS.md  README.md  README_STAGING.md  REDIS_REMOVAL_SUMMARY.md  REFACTORING_SUMMARY.md  STAGING_GUIDE.md  TEXT_MODE_FIX.md  Taskfile.yml  WORKSPACE_GUIDE.md  actual_image_layout_result.json  bench.py  biome.json  check_model.py  check_schema.py  debug_checklist.py  debug_layout.py  debug_torch.py  debug_torch_ext.py  deploy.sh  final_revert.sh  layout_analysis_result.json  main.py  migrate_secrets.sh  package-lock.json  package.json  pyproject.toml  (+13 more)
backend/: Dockerfile  layout_analysis_result.json  optimized_paper_summary.json  pyproject.toml  test_api_integration.py  test_doclayout_markdown.py  test_inference.py  test_layout.py  test_layout_analysis.py  test_layout_direct.py  test_marker.py  tmp_check.py
backend/app/: __init__.py  base_model.py  crud.py  database.py  logger.py  logic.py  main.py  middleware.py  utils.py
backend/app/auth/: __init__.py  dependencies.py  firebase.py  neon_auth.py
backend/app/core/: config.py
backend/app/domain/: __init__.py  prompts.py
backend/app/domain/dspy/: batch.py  config.py  contrastive.py  metrics.py  modules.py  signatures.py  trajectory.py
backend/app/domain/features/: __init__.py  cache_utils.py  persona_utils.py  sidebar.py  tokenization.py  translate.py  word_analysis.py
backend/app/domain/features/adversarial/: adversarial.py
backend/app/domain/features/author_agent/: __init__.py  author_agent.py
backend/app/domain/features/chat/: chat.py
backend/app/domain/features/cite_intent/: cite_intent.py
backend/app/domain/features/claim_agent/: claim_agent.py
backend/app/domain/features/figure_insight/: __init__.py  equation_service.py  figure_insight.py
backend/app/domain/features/recommendation/: contrastive.py  trajectory.py
backend/app/domain/features/research_radar/: research_radar.py
backend/app/domain/features/summary/: summary.py
backend/app/domain/services/: __init__.py  analysis_service.py  coordinate_service.py  figure_service.py  grobid_service.py  heron_service.py  language_service.py  layout_analysis_service.py  layout_service.py  local_translator.py  markdown_builder.py  nlp_service.py  ocr_engine.py  paddle_layout_service.py  paper_acquisition.py  paper_processing.py  paper_reanalysis.py  pdf_ocr_service.py  pdf_text_extractor.py  recommendation_service.py  surya_service.py
backend/app/providers/: __init__.py  ai_provider.py  bigquery_log.py  cloud_sql_storage.py  cloud_tasks.py  dictionary_provider.py  genai_helpers.py  image_storage.py  inference_client.py  orm_storage.py  pg_log.py  postgresql_storage.py  redis_provider.py  storage_provider.py  vision_ocr.py
backend/app/routers/: __init__.py  analysis.py  auth.py  chat.py  client_errors.py  contact.py  dspy.py  explore.py  feedback.py  figures.py  note.py  papers.py  pdf.py  recommendation.py  stamps.py  translation.py  upload.py  users.py  worker.py
backend/app/schemas/: client_error.py  contact.py  dspy.py  feedback.py  gemini_schema.py  recommendation.py
backend/app/scripts/: convert_m2m100.py  init_cloud_db.py  run_heavy_job.py
backend/app/static/js/: auth.js  stamps.js
backend/app/templates/: base.html  index.html
backend/app/templates/partials/: upload_area.html  viewer_area.html
backend/app/templates/partials/sidebar/: tab_figures.html  tab_note.html
backend/app/worker_api/: main.py
backend/app/worker_api/routers/: jobs.py
backend/app/workers/: __init__.py  arq_worker.py  init_bigquery_tables.py  init_log_tables.py  layout_job.py  queue_worker.py  sync_ga4_engagement.py
cloudflare-workers/: package-lock.json  package.json  tsconfig.json  worker_logs.txt  wrangler.toml
cloudflared/: config.dev.yml  config.main.yml  config.yml
common/: __init__.py  config.py  dspy_seed_prompt.py  logger.py  processing_status.py  prompts.py  settings.toml
config/: .env.example  .env.homeserver.example  README.md  resources.json
configs/: .env.example
docs/: social-features-plan.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-results.json  tsconfig.json  vite.config.d.ts  vite.config.js  vite.config.js.map  wrangler.jsonc
inference-service/: .env.example  Dockerfile  Dockerfile.layout  Dockerfile.ocr  Dockerfile.translation  README.md  benchmark_l_model.py  benchmark_speed.py  cloudbuild.yaml  debug_imports.py  main.py  measure_l_int8.py  pyproject.toml  quantize_layout_model.py  requirements.txt  run_sml_analysis.py  test_layout_service.py  test_layout_service_onnx.py  test_ocr_local.py  test_pdf_analysis.py
inference-service/services/: __init__.py  layout_service.py  translation_service.py
inference-service/services/layout_detection/: __init__.py  layout_service.py  openvino_layout_service.py  preprocess.py
inference-service/services/ocr/: ocr_service.py
inference-service/services/translation/: llamacpp_service.py  m2m100_service.py  nlp.py  translation_service.py  utils.py
inference-service/services/translation_with_llamacpp/: __init__.py  llamacpp_service.py
inference-service/tests/: test_layout_service_detailed.py
infrastructure/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
migrations/: env.py
plans/: 20260130-text-mode.md  20260201-alembic-introduction.md  20260201-cloud-tasks-migration.md  20260201-pdf-export-with-notes.md
redis_provider/: provider.py  pyproject.toml
scripts/: cleanup_paddle_models.sh  format_logs.py  measure_performance.py  measure_translation.py  staging-test.sh
src/: crud.py  logger.py  logic.py  main.py  prompts.py  utils.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_adversarial.py  test_api.py  test_chat.py  test_equation_service.py  test_pdf_ocr_service.py  (+9 more)
(+489 files in other folders)
