[project]
name = "paperterrace"
version = "0.1.0"
description = "Research paper analysis and furigana tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "ctranslate2>=4.6.3",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "en-core-web-sm",
    "fastapi>=0.128.0",
    "firebase-admin>=6.0.0",
    "genai>=1.0.3",
    "go-task-bin>=3.48.0",
    "google-cloud-aiplatform>=1.135.0",
    "google-cloud-storage>=3.8.0",
    "google-genai>=1.60.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.23.0",
    "jinja2>=3.1.6",
    "pdfplumber>=0.11.9",
    "pip>=25.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "structlog>=24.1.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.40.0",
    "Pillow>=10.4.0",
    "typer>=0.21.1",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.13.0.90",
    "alembic>=1.18.3",
    "sqlalchemy>=2.0.46",
]


[dependency-groups]
dev = [
    "ty>=0.0.13",
    "ruff>=0.14.14",
    "unidic-lite>=1.0.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
    "pyright>=1.1.390",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "git-filter-repo>=2.47.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ty.environment]
python = ".venv"
root = [".", "./src"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
