[project]
name = "paperterrace-workspace"
version = "0.1.0"
description = "PaperTerrace Workspace - Research paper analysis and furigana tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.9",
    "httpx>=0.24.0",
    "structlog>=24.1.0",
    "pdfplumber>=0.11.9",
    
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.uv.workspace]
members = ["backend", "inference-service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "inference-service"]

[tool.pyright]
pythonVersion = "3.12"