[project]
name = "paperterrace-backend"
version = "0.1.0"
description = "PaperTerrace Backend Service - Main API and business logic"
readme = "../README.md"
requires-python = ">=3.12"
# Cache buster: 2026-02-06-1
dependencies = [
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    
    # Google Cloud & AI
    "google-genai>=1.60.0",
    "google-cloud-aiplatform>=1.135.0",
    "google-cloud-storage>=3.8.0",
    "google-cloud-tasks>=2.21.0",
    "firebase-admin>=6.0.0",
    "genai>=1.0.3",
    
    # Database
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.3",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    
    # NLP & ML
    "spacy>=3.8.11",
    "en-core-web-sm",
    "tiktoken>=0.12.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26.4",
    "Pillow>=11.0.0",
    
    # PDF Processing
    "pdfplumber>=0.11.9",
    "beautifulsoup4>=4.14.3",
    
    # Utilities
    "structlog>=24.1.0",
    "chardet>=5.2.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.3.0",
    "go-task-bin>=3.48.0",
    "typer>=0.21.1",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ty>=0.0.13",
    "unidic-lite>=1.0.8",
    "pyright>=1.1.390",
    "git-filter-repo>=2.47.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ty.environment]
python = ".venv"
root = [".", "./app"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
