[project]
name = "paperterrace-backend"
version = "0.1.0"
description = "PaperTerrace Backend Service - Main API and business logic"
readme = "../README.md"
requires-python = ">=3.12"
# Cache buster: 2026-02-06-1
dependencies = [
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.9",
    "httpx[http2]>=0.27.0",
    "jinja2>=3.1.6",
    # Google Cloud & AI
    "google-genai>=1.60.0",
    "google-cloud-aiplatform>=1.135.0",
    "google-cloud-storage>=3.8.0",
    "google-cloud-tasks>=2.21.0",
    "firebase-admin>=6.0.0",
    # Database
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.3",
    "psycopg2-binary>=2.9.11",
    # NLP & ML
    "spacy>=3.8.11",
    "en-core-web-sm",
    "tiktoken>=0.12.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.26.4",
    "Pillow>=11.0.0",
    # PDF Processing
    "pdfplumber>=0.11.9",
    "beautifulsoup4>=4.14.3",
    # Utilities
    "structlog>=24.1.0",
    "chardet>=5.2.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.3.0",
    "go-task-bin>=3.48.0",
    "typer>=0.21.1",
    "uuid6>=2025.0.1",
    "redis>=7.2.0",
    "dspy>=2.5.26",
    "schedule>=1.2.2",
    "cloud-sql-python-connector>=1.20.0",
    "openai>=1.0.0",
    "litellm>=1.40.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "unidic-lite>=1.0.8",
    "git-filter-repo>=2.47.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ty.environment]
python = ".venv"
root = [".", "./app"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.pytest.ini_options]
addopts = "--testmon"
