[project]
name = "paperterrace-backend"
version = "0.1.0"
description = "PaperTerrace Backend Service - Main API and business logic"
readme = "../README.md"
requires-python = ">=3.12"
# Cache buster: 2026-02-06-1
dependencies = [
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.9",
    "httpx[http2]>=0.27.0",
    # Google Cloud & AI
    "google-genai>=1.60.0",
    "google-cloud-storage>=3.8.0",
    "google-cloud-tasks>=2.16.0",
    "google-analytics-data>=0.18.0",
    # Database
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.3",
    "psycopg2-binary>=2.9.11",
    # NLP & ML
    "Pillow>=11.0.0",
    # PDF Processing
    "pdfplumber>=0.11.9",
    # Utilities
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "dynaconf>=3.2.0",
    "email-validator>=2.3.0",
    "go-task-bin>=3.48.0",
    "uuid6>=2025.0.1",
    "redis>=5.0.0,<6",
    "arq>=0.26.1",
    "sentry-sdk[fastapi]<2.0.0",
    "dspy>=2.5.26,<2.6",
    "pymupdf4llm>=0.3.4",
    "python-jose[cryptography]>=3.5.0",
    "google-cloud-vision>=3.12.1",
    # OCR
    "pytesseract>=0.3.13",
    "lxml>=5.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "unidic-lite>=1.0.8",
    "git-filter-repo>=2.47.0",
    "pytest-testmon>=2.2.0",
    "playwright>=1.50.0",
    "pytest-playwright>=0.7.0",
    "respx>=0.22.0",
    "nest-asyncio>=1.6.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ty.environment]
python = ".venv"
root = [".", "./app"]

[tool.pytest.ini_options]
addopts = "--testmon"
asyncio_mode = "auto"
markers = [
    "xdist_group: run tests in the same xdist worker group",
]
