[project]
name = "paperterrace-inference"
version = "0.1.0"
description = "PaperTerrace Inference Service - Layout Analysis and Translation"
readme = "../README.md"
authors = [
    {name = "PaperTerrace Team"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.9",
    "httpx>=0.24.0",
    "numpy>=1.26.4",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "dynaconf>=3.2.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
layout = [
    "onnxruntime>=1.23.2",
    "openvino>=2024.0.0",
    "opencv-python-headless>=4.13.0.92",
    "onnx-graphsurgeon>=0.5.8",
    "Pillow>=11.0.0",
]
ocr = [
    "openvino>=2024.0.0",
    "opencv-python-headless>=4.13.0.92",
    "Pillow>=11.0.0",
]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.pytest.ini_options]
addopts = "--testmon"
